<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rnp_background" android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="216dp"
        android:layout_height="310dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sirena_robotic_arm" />

    <SeekBar android:id="@+id/sb_motorAngle" android:layout_width="200dp" android:layout_height="22dp" android:max="285" android:progress="150" android:min="15" app:layout_constraintBottom_toTopOf="@+id/tv_motorNumber" app:layout_constraintStart_toEndOf="@+id/bt_sliderDec"/>

    <!-- Motors Button with Dropdown Arrow -->
        <LinearLayout
        android:id="@+id/ll_motors"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
            android:orientation="horizontal"
        android:layout_marginStart="176dp"
        android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

    <Button android:textSize="10sp" android:textColor="@color/buttonTextColor" android:id="@+id/bt_recordFrame" android:background="@drawable/button_background" android:layout_width="120dp" android:layout_height="32dp" android:layout_marginTop="16dp" android:text="@string/recordFrame" android:onClick="recordFrame_on_click" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/bt_newFrame"/>
    <Button android:textSize="10sp" android:textColor="@color/buttonTextColor" android:id="@+id/bt_saveAction" android:background="@drawable/button_background" android:layout_width="120dp" android:layout_height="32dp" android:layout_marginBottom="8dp" android:text="@string/saveAction" android:onClick="saveAction_on_click" android:layout_marginEnd="32dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <Button android:textSize="10sp" android:textColor="@color/buttonTextColor" android:id="@+id/bt_playAction" android:background="@drawable/button_background" android:layout_width="120dp" android:layout_height="32dp" android:layout_marginBottom="8dp" android:text="@string/playAction" android:onClick="playAction_on_click" android:layout_marginStart="64dp" android:layout_marginEnd="100dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/bt_saveAction" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/imageView2"/>
    <Button android:textSize="10sp" android:textColor="@color/buttonTextColor" android:id="@+id/bt_loadAction" android:background="@drawable/button_background" android:layout_width="120dp" android:layout_height="32dp" android:layout_marginTop="16dp" android:text="@string/loadAction" android:onClick="loadAction_on_click" android:layout_marginStart="64dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/bt_recordFrame" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintTop_toBottomOf="@+id/bt_newAction"/>

            <Button
                android:id="@+id/bt_newFrame"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:onClick="newFrame_on_click"
                android:text="Neutral frame"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <Button
        android:id="@+id/bt_neutral"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:onClick="neutral_on_click"
        android:text="@string/neutral"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"/>

            <Button
        android:id="@+id/bt_disconnect"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="Disconnect"
        android:textColor="@color/buttonTextColor"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_neutral"/>

    <Button android:textSize="10sp" android:textColor="@color/buttonTextColor" android:id="@+id/bt_newAction" android:background="@drawable/button_background" android:layout_width="120dp" android:layout_height="32dp" android:layout_marginTop="16dp" android:text="@string/newAction" android:onClick="newAction_on_click" android:layout_marginStart="64dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/bt_newFrame" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_frameList" android:background="@drawable/framelist_background" android:clipChildren="false" android:clipToPadding="false" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="64dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toTopOf="@+id/bt_saveAction" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintTop_toBottomOf="@+id/bt_loadAction">
        <!-- Undo and Loop buttons row -->
        <LinearLayout
            android:id="@+id/ll_undo_loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </LinearLayout>
        <TextView android:gravity="center_vertical" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="43dp" android:text="Title:" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <ImageButton android:id="@+id/bt_delete" android:background="@android:color/transparent" android:padding="5dp" android:layout_width="40dp" android:layout_height="0dp" android:scaleType="centerInside" android:adjustViewBounds="true" android:onClick="delete_on_click" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toEndOf="@+id/tv_title" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/delete"/>

        <HorizontalScrollView
            android:id="@+id/sv_frameList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/inner_framelist_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/ll_frames"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                android:orientation="vertical" />
                </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:id="@+id/tv_motorNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="Motor 1" android:layout_marginStart="75dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/sb_motorAngle"/>
    <ImageButton android:id="@+id/bt_sliderDec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:onClick="dec_slider" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:srcCompat="@android:drawable/arrow_down_float"/>
    <ImageButton android:id="@+id/bt_sliderInc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:onClick="inc_slider" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/sb_motorAngle" app:srcCompat="@android:drawable/arrow_up_float"/>

    <Button
        android:id="@+id/bt_motors"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:background="@drawable/motorbutton_background"
        android:text="Motors"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/iv_motors_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_arrow_drop_down"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="31dp" />

    <ImageButton
        android:id="@+id/bt_undo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="Undo"
        android:padding="8dp"
        android:src="@drawable/ic_undo"
        tools:layout_editor_absoluteX="660dp"
        tools:layout_editor_absoluteY="28dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_loop"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:contentDescription="Loop"
        android:showText="false"
        tools:layout_editor_absoluteX="731dp"
        tools:layout_editor_absoluteY="34dp" />

</androidx.constraintlayout.widget.ConstraintLayout>